--- a/index.html
+++ b/index.html
@@ -10,15 +10,10 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
         <link rel="stylesheet" href="css/bootstrap.min.css">
-
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/animate.css">
-
-
-
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src = "https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
@@ -28,8 +23,6 @@
 
     </head>
     <body>
-
-
       <header id="header">
       <div class="container">
 
@@ -66,7 +59,6 @@
           <li><a href="#contact">Blog</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
-
       </div>
       </header><!-- #header -->
 
@@ -211,7 +203,7 @@
     <div class="row clientRow">
         <div class="col-md-4 col-sm-6">
             <div class="our-team">
-                <img src="img/daddario.png" alt="">
+                <img src="http://via.placeholder.com/326x326" alt="">
                 <div class="team-content">
                     <h3 class="team-prof">
                         <a href="#">D'Addario</a>
@@ -223,7 +215,7 @@
         </div>
         <div class="col-md-4 col-sm-6">
             <div class="our-team">
-                <img src="img/bruno.png" alt="">
+                <img src="http://via.placeholder.com/326x326" alt="">
                 <div class="team-content">
                     <h3 class="team-prof">
                         <a href="#">Williamson</a>
@@ -235,7 +227,7 @@
         </div>
         <div class="col-md-4 col-sm-6">
             <div class="our-team">
-                <img src="img/cutter.png" alt="">
+                <img src="http://via.placeholder.com/326x326" alt="">
                 <div class="team-content">
                     <h3 class="team-prof">
                         <a href="#">Williamson</a>
@@ -247,7 +239,7 @@
         </div>
         <div class="col-md-4 col-sm-6">
             <div class="our-team">
-                <img src="img/fidelity.png" alt="">
+                <img src="http://via.placeholder.com/326x326" alt="">
                 <div class="team-content">
                     <h3 class="team-prof">
                         <a href="#">Williamson</a>
@@ -259,7 +251,7 @@
         </div>
         <div class="col-md-4 col-sm-6">
             <div class="our-team">
-                <img src="img/ops.png" alt="">
+                <img src="http://via.placeholder.com/326x326" alt="">
                 <div class="team-content">
                     <h3 class="team-prof">
                         <a href="#">Williamson</a>
