--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
 </section class="backgroundImage">
 
-<section class="no-padding" id="aboutUs">
+<section  id="aboutUs">
         <div class="container-fluid">
           <div class="col-lg-12 text-center">
               <h2 class="section-heading">OUR CORE VALUES</h2>
@@ -308,28 +308,20 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-sm-6 ">
-
                         <img src="img/strategic.png" class="img-responsive floatRight" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-
-
                             </div>
                         </div>
-                    </a>
-                </div>
+                      </div>
 
                 <div class="col-lg-6 col-sm-6 ">
-
                         <img src="img/creative.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-
-
                             </div>
                         </div>
-                    </a>
-                </div>
+                    </div>
 
             </div>
         </div>
@@ -353,10 +345,10 @@
 					<div class="form-group">
 						<input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
 					</div>
-                    <div class="form-group">
-                    <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
+            <div class="form-group">
+            <textarea class="form-control" type="textarea" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
 
-                    </div>
+          </div>
 
         <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Submit Form</button>
         </form>
