--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <div class="row clientRow">
         <div class="col-md-4 col-sm-6">
             <div class="our-team">
-                <img src="http://via.placeholder.com/326x326" alt="">
+                <img src="https://via.placeholder.com/326x326" alt="">
                 <div class="team-content">
                     <h3 class="team-prof">
                         <a href="#">D'Addario</a>
@@ -215,7 +215,7 @@
         </div>
         <div class="col-md-4 col-sm-6">
             <div class="our-team">
-                <img src="http://via.placeholder.com/326x326" alt="">
+                <img src="https://via.placeholder.com/326x326" alt="">
                 <div class="team-content">
                     <h3 class="team-prof">
                         <a href="#">Williamson</a>
@@ -227,7 +227,7 @@
         </div>
         <div class="col-md-4 col-sm-6">
             <div class="our-team">
-                <img src="http://via.placeholder.com/326x326" alt="">
+                <img src="https://via.placeholder.com/326x326" alt="">
                 <div class="team-content">
                     <h3 class="team-prof">
                         <a href="#">Williamson</a>
@@ -239,7 +239,7 @@
         </div>
         <div class="col-md-4 col-sm-6">
             <div class="our-team">
-                <img src="http://via.placeholder.com/326x326" alt="">
+                <img src="https://via.placeholder.com/326x326" alt="">
                 <div class="team-content">
                     <h3 class="team-prof">
                         <a href="#">Williamson</a>
@@ -251,7 +251,7 @@
         </div>
         <div class="col-md-4 col-sm-6">
             <div class="our-team">
-                <img src="http://via.placeholder.com/326x326" alt="">
+                <img src="https://via.placeholder.com/326x326" alt="">
                 <div class="team-content">
                     <h3 class="team-prof">
                         <a href="#">Williamson</a>
