--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         </div>
         <div class="col-md-4 col-sm-6">
             <div class="our-team">
-                <img src="img/logoHere.png" alt="">
+                <img src="img/logoHer.png" alt="">
                 <div class="team-content teamGray">
                     <h3 class="team-prof">
                         <a href="#">Ready to work with Us?</a>
