pricing table added

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 
 
 <section class="introWebElements">
+<!-- Intro section-->
   <div class="introSection">
     <h1>How we Work</h1>
     <p>A little sample of the different web elements and interactions, all are compatible with the majority of web browsers and are responsive</p>
@@ -149,6 +150,7 @@
 			<h2 class="title-h2">HTML5 AND CSS3 INTERACTIONS</h2>
 	</div>
 
+<!--Intro tables-->
   <div class="intro-table">
 			<div class="intro-table-third">
 				<img class="intro-table-third-img" src="src/img/flexible.png" width="144">
@@ -165,165 +167,154 @@
 				<h3 class="intro-table-third-h3">Compatibility</h3>
 				<p class="intro-table-third-p">Works on all modern browsers and degrades gracefully on the old ones..</p>
 			</div>
-		</div>
-  <!---styled buttons-->
-    <!-- <div class="subsec-links">
-			<div class="subsec-title-cont">
-				<h3 class="subsec-title">LINKS</h3>
-			</div>
-			<div class="links-row">
-				<div class="links-container">
-					<div class="effect">
-						<a href="#">DELICATE</a>
-					</div>
-					<div class="effect-2">
-						<a href="#"><span data-hover="GUIDELINE">GUIDELINE</span></a>
-					</div>
-					<div class="effect-3">
-						<a href="#">COMPROMISE</a>
-					</div>
-					<div class="effect-4">
-						<a href="#">GRAVITY</a>
-					</div>
-					<div class="effect-5">
-						<a href="#"><span data-hover="STEREOTYPE">STEREOTYPE</span></a>
-					</div>
-				</div>
-			</div>
-			<div class="links-row">
-				<div class="links-container">
-					<div class="effect-6">
-						<a href="#">ASSESSMENT</a>
-					</div>
-					<div class="effect-7">
-						<a href="#">UMBRELLA</a>
-					</div>
-					<div class="effect-8">
-						<a href="#">RADICAL</a>
-					</div>
-					<div class="effect-9">
-						<a href="#"><span>SUMMARY</span><span>Sumptuous Heart</span></a>
-					</div>
-					<div class="effect-10">
-						<a data-hover="POTENTIAL" href="#"><span>POTENTIAL</span></a>
-					</div>
-				</div>
-			</div>
-			<div class="links-row">
-				<div class="links-container">
-					<div class="effect-11">
-						<a data-hover="CONSCIOUS" href="#">CONSCIOUS</a>
-					</div>
-					<div class="effect-12">
-						<a href="#">FOUNDATION</a>
-					</div>
-					<div class="effect-13">
-						<a href="#">INVASION</a>
-					</div>
-					<div class="effect-14">
-						<a href="#">MOMENTUM</a>
-					</div>
-					<div class="effect-15">
-						<a data-hover="EXERCISE" href="#">EXERCISE</a>
-					</div>
-				</div>
-			</div>
-			<div class="links-row">
-				<div class="links-container">
-					<div class="effect-16">
-						<a data-hover="FOREIGNER" href="#">FOREIGNER</a>
-					</div>
-					<div class="effect-17">
-						<a data-hover="PERCEPTION" href="#">PERCEPTION</a>
-					</div>
-					<div class="effect-18">
-						<a data-hover="ECSTASY" href="#">ECSTASY</a>
-					</div>
-					<div class="effect-19">
-						<a href="#"><span data-hover="URGENCY">URGENCY</span></a>
-					</div>
-					<div class="effect-20">
-						<a href="#"><span data-hover="RATATOUILLE">RATATOUILLE</span></a>
-					</div>
-				</div>
-			</div>
-		</div> -->
+		</div><!--end intro tables div-->
 
+  <!---subsection styled links-->
 
     <div class="subsec-links">
-			<div class="subsec-title-cont">
+      <div class="subsec-title-cont">
 				<h3 class="subsec-title">LINKS</h3>
 			</div>
 
-				<div class="links-container">
-					<div class="effect">
-						<a href="#">DELICATE</a>
+			<div class="links-container">
+				<div class="effect">
+					<a href="#">DELICATE</a>
+				</div>
+				<div class="effect-2">
+					<a href="#"><span data-hover="GUIDELINE">GUIDELINE</span></a>
+				</div>
+				<div class="effect-3">
+					<a href="#">COMPROMISE</a>
+				</div>
+				<div class="effect-4">
+					<a href="#">GRAVITY</a>
+				</div>
+				<div class="effect-5">
+					<a href="#"><span data-hover="STEREOTYPE">STEREOTYPE</span></a>
+				</div>
+				<div class="effect-6">
+					<a href="#">ASSESSMENT</a>
+				</div>
+				<div class="effect-7">
+					<a href="#">UMBRELLA</a>
+				</div>
+				<div class="effect-8">
+					<a href="#">RADICAL</a>
+				</div>
+				<div class="effect-9">
+					<a href="#"><span>SUMMARY</span><span>Sumptuous Heart</span></a>
+				</div>
+				<div class="effect-10">
+					<a data-hover="POTENTIAL" href="#"><span>POTENTIAL</span></a>
+				</div>
+				<div class="effect-11">
+					<a data-hover="CONSCIOUS" href="#">CONSCIOUS</a>
+				</div>
+				<div class="effect-12">
+					<a href="#">FOUNDATION</a>
+				</div>
+				<div class="effect-13">
+					<a href="#">INVASION</a>
+				</div>
+				<div class="effect-14">
+					<a href="#">MOMENTUM</a>
+				</div>
+				<div class="effect-15">
+					<a data-hover="EXERCISE" href="#">EXERCISE</a>
+				</div>
+				<div class="effect-16">
+					<a data-hover="FOREIGNER" href="#">FOREIGNER</a>
+				</div>
+				<div class="effect-17">
+					<a data-hover="PERCEPTION" href="#">PERCEPTION</a>
+				</div>
+				<div class="effect-18">
+					<a data-hover="ECSTASY" href="#">ECSTASY</a>
+				</div>
+				<div class="effect-19">
+					<a href="#"><span data-hover="URGENCY">URGENCY</span></a>
+				</div>
+				<div class="effect-20">
+					<a href="#"><span data-hover="RATATOUILLE">RATATOUILLE</span></a>
+				</div>
+	  </div><!-- end links container-->
+  </div><!-- end subsection links-->
+
+<!--subsection pricing tables-->
+  <div class="subsec-pricing-tables">
+
+    <h3 class="subsec-title tables">PRICING TABLES</h3>
+
+    <div class="table-row">
+				<div class="table-container">
+					<div class="table-1">
+						<div class="table-title">
+							Basic
+						</div>
+						<div class="div-block-3"></div>
+						<div class="table-price">
+							$199.99
+						</div>
+						<div class="table-hook">
+							First option is good option.
+						</div>
+						<ul class="table-list">
+							<li class="table-list-item">Lorem ipsum</li>
+							<li class="table-list-item">Dolor sit amet</li>
+							<li class="table-list-item">Consectetur adipiscing</li>
+						</ul>
+						<div class="table-choose">
+							Choose this plan
+						</div>
 					</div>
-					<div class="effect-2">
-						<a href="#"><span data-hover="GUIDELINE">GUIDELINE</span></a>
+					<div class="table-1">
+						<div class="table-title">
+							Standard
+						</div>
+						<div class="div-block-3"></div>
+						<div class="table-price">
+							$299.99
+						</div>
+						<div class="table-hook">
+							Second choice is better choice.
+						</div>
+						<ul class="table-list">
+							<li class="table-list-item">Lorem ipsum</li>
+							<li class="table-list-item">Dolor sit amet</li>
+							<li class="table-list-item">Consectetur adipiscing</li>
+							<li>Pellentesque vitae</li>
+						</ul>
+						<div class="table-choose">
+							Choose this plan
+						</div>
 					</div>
-					<div class="effect-3">
-						<a href="#">COMPROMISE</a>
+					<div class="table-1">
+						<div class="table-title">
+							Professional
+						</div>
+						<div class="div-block-3"></div>
+						<div class="table-price">
+							$399.99
+						</div>
+						<div class="table-hook">
+							Third choice is best choice.
+						</div>
+						<ul class="table-list">
+							<li class="table-list-item">Lorem ipsum</li>
+							<li class="table-list-item">Dolor sit amet</li>
+							<li class="table-list-item">Consectetur adipiscing</li>
+							<li>Consectetur nulla</li>
+							<li>Consectetur adipiscing</li>
+						</ul>
+						<div class="table-choose">
+							Choose this plan
+						</div>
 					</div>
-					<div class="effect-4">
-						<a href="#">GRAVITY</a>
-					</div>
-					<div class="effect-5">
-						<a href="#"><span data-hover="STEREOTYPE">STEREOTYPE</span></a>
-					</div>
+				</div>
+			</div>
 
 
-					<div class="effect-6">
-						<a href="#">ASSESSMENT</a>
-					</div>
-					<div class="effect-7">
-						<a href="#">UMBRELLA</a>
-					</div>
-					<div class="effect-8">
-						<a href="#">RADICAL</a>
-					</div>
-					<div class="effect-9">
-						<a href="#"><span>SUMMARY</span><span>Sumptuous Heart</span></a>
-					</div>
-					<div class="effect-10">
-						<a data-hover="POTENTIAL" href="#"><span>POTENTIAL</span></a>
-					</div>
-
-
-					<div class="effect-11">
-						<a data-hover="CONSCIOUS" href="#">CONSCIOUS</a>
-					</div>
-					<div class="effect-12">
-						<a href="#">FOUNDATION</a>
-					</div>
-					<div class="effect-13">
-						<a href="#">INVASION</a>
-					</div>
-					<div class="effect-14">
-						<a href="#">MOMENTUM</a>
-					</div>
-					<div class="effect-15">
-						<a data-hover="EXERCISE" href="#">EXERCISE</a>
-					</div>
-
-
-					<div class="effect-16">
-						<a data-hover="FOREIGNER" href="#">FOREIGNER</a>
-					</div>
-					<div class="effect-17">
-						<a data-hover="PERCEPTION" href="#">PERCEPTION</a>
-					</div>
-					<div class="effect-18">
-						<a data-hover="ECSTASY" href="#">ECSTASY</a>
-					</div>
-					<div class="effect-19">
-						<a href="#"><span data-hover="URGENCY">URGENCY</span></a>
-					</div>
-					<div class="effect-20">
-						<a href="#"><span data-hover="RATATOUILLE">RATATOUILLE</span></a>
-					</div>
-
-		</div> 
+  </div><!--end subsection pricing-tables-->
 
 
 </section><!-- end introWebElements-->
