--- a/index.html
+++ b/index.html
@@ -312,9 +312,14 @@
 					</div>
 				</div>
 			</div>
-
-
   </div><!--end subsection pricing-tables-->
+
+<!-- Grdid responsive galleries-->
+  <div class="subsec-galleries">
+			<h3 class="subsec-title galerias">GALLERIES</h3>
+
+
+		</div><!-- end subsection grid gallery-->
 
 
 </section><!-- end introWebElements-->
