--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="container">
 
       <div id="logo" class="pull-left">
-        <a href=""><img src="src/img/logosmartz.png" alt="" title="" /></img></a>
+        <a href=""><img src="src/img/alx-logo.png" alt="" title="" /></img></a>
 
       </div>
 
@@ -334,7 +334,7 @@
     <div class="row clientRow">
         <div class="col-md-4 col-sm-6">
             <div class="our-team">
-                <img src="https://via.placeholder.com/326x326" alt="">
+                <img src="https://source.unsplash.com/random/326x326" alt="">
                 <div class="team-content">
                     <h3 class="team-prof">
                         <a href="#">D'Addario</a>
@@ -346,7 +346,7 @@
         </div>
         <div class="col-md-4 col-sm-6">
             <div class="our-team">
-                <img src="https://via.placeholder.com/326x326" alt="">
+                <img src="https://source.unsplash.com/random/326x326?design" alt="">
                 <div class="team-content">
                     <h3 class="team-prof">
                         <a href="#">Williamson</a>
@@ -358,7 +358,7 @@
         </div>
         <div class="col-md-4 col-sm-6">
             <div class="our-team">
-                <img src="https://via.placeholder.com/326x326" alt="">
+                <img src="https://source.unsplash.com/random/326x326?skyscraper alt="">
                 <div class="team-content">
                     <h3 class="team-prof">
                         <a href="#">Williamson</a>
@@ -370,7 +370,7 @@
         </div>
         <div class="col-md-4 col-sm-6">
             <div class="our-team">
-                <img src="https://via.placeholder.com/326x326" alt="">
+                <img src="https://source.unsplash.com/random/326x326?company" alt="">
                 <div class="team-content">
                     <h3 class="team-prof">
                         <a href="#">Williamson</a>
@@ -382,7 +382,7 @@
         </div>
         <div class="col-md-4 col-sm-6">
             <div class="our-team">
-                <img src="https://via.placeholder.com/326x326" alt="">
+                <img src="https://source.unsplash.com/random/326x326?web" alt="">
                 <div class="team-content">
                     <h3 class="team-prof">
                         <a href="#">Williamson</a>
